fixed map showing on firefox.

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -58,12 +58,6 @@ label {
 .jobpageleftside, {
 	height: 100%;
 	/*background-color: green;*/
-
-	#map {
-		height: 100%;
-		width: 100%;
-		position: relative;
-	}
 }
 
 .searchTextField {
@@ -153,10 +147,10 @@ label {
 }
 
 #map_canvas {
-	width: 58.4%%;
-	height: calc(100% - 100px);
+	width: 100%;
+	height: 100%;
+	display:block;
 	position:fixed;
-	top: 100px;
 	left:0;
 	bottom:0;
 }
